# assimp2json

./: .gitmodules  CMakeLists.txt  LICENSE  README  Readme.md
assimp2json/: json_exporter.cpp  main.cpp  version.h.in
samples/: Animated.x.assimp.json  Animated.x.json  Collada.dae.assimp.json  Collada.dae.json  EmbeddedTexture.blend.assimp.json  EmbeddedTexture.blend.json  spider.obj.assimp.json  spider.obj.json  teapots.dae.assimp.json  teapots.dae.json
